# 2D_boundary_value_fem

./: CMakeLists.txt  README.md  abc.cpp  both_err.py  coefficients_n10.csv  coefficients_n15.csv  coefficients_n20.csv  coefficients_n25.csv  coefficients_n30.csv  coefficients_n35.csv  coefficients_n40.csv  coefficients_n45.csv  coefficients_n5.csv  coefficients_n50.csv  e.py  e1.py  error.py  main  main.cpp  node_errors_circle_HelmHoltz.txt  node_errors_circle_Laplace.txt  node_errors_circle_poisson.txt  node_errors_square_HelmHoltz.txt  node_errors_square_Laplace.txt  node_errors_square_poisson.txt  plot_lines.py  possion  possion.cpp
